--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8",
     "express": "4.17",
-    "express-async-errors": "3.1"
+    "express-async-errors": "3.1",
+    "morgan": "1.10"
   },
   "devDependencies": {
     "eslint": "6.8",
